fixed for CHLK-3731 Teacher. Student profile. Schedule. Numbers of periods on the calendar (day view) are cut off

--- a/Chalkable.Web/assets/sass2/3_molecules/_calendar.sass
+++ b/Chalkable.Web/assets/sass2/3_molecules/_calendar.sass
@@ -3,7 +3,6 @@
   border-radius: 5px
   border: 1px solid #c8c7c3
   background: #fff
-  overflow: hidden
 
   .day-calendar-list-item
     >DIV
